# sem_io

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  sem_io.py
src/sem_io/: __init__.py  cli.py  metadata_extractor.py  sem_io.py
