[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sem_io"
description = 'Python functions for extracting metadata parameters from the header of SEM images'
authors = [{name = "Thomas G. Woodcock"},]
license = {file = "LICENSE"}

classifiers=[
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Development Status :: 4 - Beta',
    'Intended Audience :: End Users/Desktop',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Visualization',
    'Topic :: Scientific/Engineering :: Image Processing',
    'Topic :: Scientific/Engineering :: Physics',
    'Topic :: Utilities',
]
keywords = ["research", "data", "electron microscopy", "SEM", "image", "metadata"]
requires-python = ">=3.6"
dependencies = ["Pillow"]
dynamic = ["version"]

[project.readme]
'file' = "README.md"
'content-type' = "text/markdown"

[project.urls]
'Source' = 'https://github.com/tgwoodcock/sem_io.git'
'Bug Tracker' = 'https://github.com/tgwoodcock/sem_io.git/issues'

[project.scripts]
sem_io = "sem_io:main"

[tool.setuptools.dynamic]
version = {attr = "sem_io.__version__"}
